<resources>
    <string name="app_name">Misotter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Misotter!</string>
    <string name="title_activity_time_line">TimeLineActivity</string>
    <string name="message_loading">Now Loading…</string>
    <string name="button_sign_in">Sign In!</string>
    <string name="button_sign_up">Sign Up!</string>
    <string name="text_user_id">User ID:</string>
    <string name="text_password">Password:</string>
</resources>
