<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/misotter_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom">

        <Button
            android:id="@+id/main_sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_button_margin"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/button_sign_in"
            android:textColor="@color/main_light_text_color"
            android:textSize="@dimen/main_button_text_size" />

        <Button
            android:id="@+id/main_sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_button_margin"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/button_sign_up"
            android:textColor="@color/main_light_text_color"
            android:textSize="@dimen/main_button_text_size" />

    </LinearLayout>

</LinearLayout>
